h1. CHANGELOG

h3. 2.1.6 March 17, 2015 (book version 2.1.6)

* book version matches the example application

h3. 2.1.5 February 16, 2015 (book version 2.1.5)

* use Ruby 1.9 hash syntax in the 'validates_format_of :email' statement (closes issue #46)

h3. 2.1.4 December 29, 2014 (book version 2.1.4)

* workaround for changes in 'google_drive' gem v1.0.0
* updated Ruby from version 2.1.5 to 2.2.0

h3. 2.1.3 December 25, 2014 (book version 2.1.3)

* updated Rails from version 4.1.8 to Rails 4.2.0

h3. 2.1.2 December 4, 2014 (book version 2.1.2)

* updated Ruby from version 2.1.3 to 2.1.5
* updated Rails from version 4.1.6 to Rails 4.1.8

h3. 2.1.0 October 12, 2014 (book version 2.1.1)

* no need to specify 'foundation-rails' gem version (closes issue #38)

h3. 2.0.4 September 24, 2014 (book version unreleased)

* updated Ruby from version 2.1.2 to 2.1.3
* updated Rails from version 4.1.4 to Rails 4.1.6
* add files to support deployment with Heroku Button
* specify 'foundation-rails 5.4.3.1' (don't use foundation-rails 5.4.4.0) pending resolution of issue #38

h3. 2.0.3 July 7, 2014 (book version unreleased)

* updated Ruby from version 2.1.1 to 2.1.2
* updated Rails from version 4.1.1 to Rails 4.1.4

h3. 2.0.2 May 5, 2014 (book version 2.0.2)

* set 'mailchimp_api_key' explicitly when instantiating Gibbon

h3. 2.0.1 April 16, 2014 (book version 2.0.1)

* replaced 'Rails.application.secrets.gmail_username' with 'Rails.application.secrets.email_provider_username'
* replaced 'gmail_password' with 'email_provider_password'

h3. 2.0.0 April 11, 2014 (book version 2.0.0)

* extensive changes for Ruby 2.1 and Rails 4.1

h3. 1.19.2 March 6, 2014 (book version unreleased)

* ok to specify 'foundation-rails' (foundation-rails 5.2.0.0 resolves issue #27)

h3. 1.19.1 February 19, 2014 (book version unreleased)

* specify 'foundation-rails 5.0.3.1' (don't use foundation-rails 5.1.1.0) pending resolution of issue #27
* update to Rails 4.0.3
