@@ -14,7 +14,6 @@ group :development, :test do
 end
 gem 'foundation-rails'
 gem 'gibbon'
-gem 'google_drive'
 gem 'high_voltage'
 gem 'simple_form'
 group :development do
