@@ -16,11 +16,11 @@ This example application is fully documented in the book "Learn Ruby on Rails":h
 
 With the book, a complete beginner can create this application without any additional knowledge. The book explains all the code, introducing basic concepts of Rails application development and professional practices.
 
-h4. Latest Book Version: 2.1.6
+h4. Latest Book Version: 2.2.0
 
-The most recent version of the book was written for Rails 4.2 and released March 17, 2015. Please make sure you have the newest version of the book (or the code examples may not work). The book version is shown on the title page. "Get the book":http://learn-rails.com/learn-ruby-on-rails.html if you need the new version.
+The most recent version of the book was written for Rails 4.2 and released June 6, 2015. Please make sure you have the newest version of the book (or the code examples may not work). The book version is shown on the title page. "Get the book":http://learn-rails.com/learn-ruby-on-rails.html if you need the new version.
 
-h4. Application Version: 2.1.6
+h4. Application Version: 2.2.0
 
 This example application (here on GitHub) is the same as the code in the book.
 
@@ -37,7 +37,6 @@ The example application is more than a learning exercise. The tutorial shows how
 * Navigation bar
 * "About" page
 * Contact page with "contact request" form
-* Google spreadsheet datastore
 * Mailing list sign-up form
 
 h4. Additional Pages
@@ -58,11 +57,7 @@ h4. Contact Form
 
 The Contact page includes a "contact request" form. The contact form can be adapted for other purposes, such as an appointment request, or customized as a survey form.
 
-When the visitor submits the form, data is saved to a spreadsheet on Google Drive that the site owner can access for review and analysis. An email message goes to the site owner containing the contents of the form.
-
-h4. Google Spreadsheet Datastore
-
-Google Drive (formerly known as Google Docs) provides an easy way to store and access form data using a spreadsheet. Because Google Drive manages access to the spreadsheet, authentication and authorization are not needed in the application.
+When the visitor submits the form, an email message goes to the site owner containing the contents of the form.
 
 h4. No Database
 
@@ -80,7 +75,7 @@ This is one in a series of Rails example apps and tutorials from the "RailsApps 
 
 h2. Accounts You Will Need
 
-To send email from the application, and save data to a spreadsheet on Google Drive, you will need a "Gmail":https://accounts.google.com/SignUp?service=mail account. You can get a free "Gmail":https://accounts.google.com/SignUp?service=mail account if you don't already have one. Other services, such as "Mandrill":http://mandrill.com/, can be used to send email from the application. Or you can connect directly to an SMTP mail server to send email. See the article "Send Email with Rails":http://railsapps.github.io/rails-send-email.html for more information.
+To send email from the application, you will need a "Gmail":https://accounts.google.com/SignUp?service=mail account. You can get a free "Gmail":https://accounts.google.com/SignUp?service=mail account if you don't already have one. Other services, such as "Mandrill":http://mandrill.com/, can be used to send email from the application. Or you can connect directly to an SMTP mail server to send email. See the article "Send Email with Rails":http://railsapps.github.io/rails-send-email.html for more information.
 
 The application includes a form that allows website visitors to "opt-in" to a mailing list. You'll need a "MailChimp":http://mailchimp.com/ account, which is free. MailChimp allows you to send up to 12,000 emails/month to a list of 2000 or fewer subscribers for free. There is no cost to set up an account. After you have set up a MailChimp account, create a new mailing list where you can collect email addresses of visitors who have asked to subscribe to a newsletter. The MailChimp "Lists" page has a button for "Create List." The list name and other details are up to you.
 
@@ -197,7 +192,6 @@ Here are the gems used by the application:
 * "activerecord-tableless":https://github.com/softace/activerecord-tableless - helps to use Rails without a database
 * "foundation-rails":https://github.com/zurb/foundation - front-end framework
 * "gibbon":https://github.com/amro/gibbon - access to the MailChimp API
-* "google_drive":https://github.com/gimite/google-drive-ruby - use Google Drive spreadsheets for data storage
 * "high_voltage":https://github.com/thoughtbot/high_voltage - for static pages like "about"
 * "simple_form":http://simple-form.plataformatec.com.br/ - forms made easy
 
@@ -291,7 +285,7 @@ Enter your email address and click the "sign up" button. You should see the page
 
 You should be able to click the navigation links for "About" or "Contact" and see those pages.
 
-Submitting the form on the "Contact" page should send an email mesage to the site owner's address and save the data to a spreadsheet on Google Drive. Visit your Google Drive account ("Drive" is in the navigation bar when you visit the Googe Search or Gmail home pages). You'll see a list of Google Drive files. The newest one will be a *Learn-Rails-Example* spreadsheet. Open the file and you will see the data from the contact form. Whenever a visitor submits the contact form, the spreadsheet will update within seconds.
+Submitting the form on the "Contact" page should send an email message to the site owner's address.
 
 Stop the server with Control-C. If you test the app by starting the web server and then leave the server running while you install new gems, you’ll have to restart the server to see any changes. The same is true for changes to configuration files in the config folder. This can be confusing to new Rails developers because you can change files in the app folders without restarting the server. Stop the server each time after testing and you will avoid this issue.
 
