@@ -1,5 +1,10 @@
 h1. CHANGELOG
 
+h3. 2.2.0 June 6, 2015 (book version 2.2.0)
+
+* book version matches the example application
+* removed 'google_drive' gem and 'update_spreadsheet' method (no longer using Google Drive)
+
 h3. 2.1.6 March 17, 2015 (book version 2.1.6)
 
 * book version matches the example application
